# Shiori

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NEXT_STEPS.md  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  site.yml
assets/: capture.ps1  drive.ps1
assets/Main giff/: make_gif.py
assets/icon/: README.txt  generate.py  shiori-64.rgba
assets/icon/desktop/: shiori-64.rgba
assets/icon/ios/AppIcon-Dark.appiconset/: Contents.json
assets/icon/macos/: Shiori.icns
assets/icon/web/: site.webmanifest  web-snippet.html
crates/jrc-app/: Cargo.toml
crates/jrc-app/examples/: smoke.rs
crates/jrc-app/src/: chat.rs  data.rs  dictionary.rs  extract.rs  finish.rs  ingest.rs  lib.rs  mining.rs  review.rs  sessions.rs  sources.rs  stats.rs  transfer.rs
crates/jrc-app/tests/: pipeline.rs
crates/jrc-core/: Cargo.toml
crates/jrc-core/src/: error.rs  lib.rs  text.rs  word.rs
crates/jrc-db/: Cargo.toml
crates/jrc-db/src/: anki.rs  cards.rs  dict.rs  documents.rs  lib.rs  schema.rs  sessions.rs  stats.rs  words.rs
crates/jrc-dict/: Cargo.toml
crates/jrc-dict/examples/: parse_smoke.rs
crates/jrc-dict/src/: frequency.rs  jlpt.rs  lib.rs  lookup.rs  register.rs  types.rs
crates/jrc-gui/: Cargo.toml
crates/jrc-gui/src/: app.rs  fonts.rs  main.rs  settings.rs
crates/jrc-gui/src/views/: dictionary.rs  library.rs  mining.rs  mod.rs  production.rs  reader.rs  review.rs  settings.rs  setup.rs  sources.rs  stats.rs  welcome.rs
crates/jrc-llm/: Cargo.toml
crates/jrc-llm/src/: anthropic.rs  lib.rs  ollama.rs  openai_compat.rs
crates/jrc-nlp/: Cargo.toml
crates/jrc-nlp/src/: analyzer.rs  inflection.rs  kana.rs  lib.rs  pos.rs  segment.rs
crates/jrc-srs/: Cargo.toml
crates/jrc-srs/src/: lib.rs  scheduler.rs
crates/shiori-app/: Cargo.toml
crates/shiori-app/assets/: free_digital_libraries_by_language.json
crates/shiori-app/examples/: smoke.rs
crates/shiori-app/src/: books.rs  chat.rs  data.rs  dictionary.rs  extract.rs  finish.rs  home.rs  ingest.rs  lib.rs  mining.rs  opds.rs  packs.rs  review.rs  sessions.rs  sources.rs  stats.rs  transfer.rs  web_packs.rs
crates/shiori-app/tests/: live_book_search.rs  pipeline.rs
crates/shiori-core/: Cargo.toml
crates/shiori-core/src/: error.rs  lib.rs  text.rs  word.rs
crates/shiori-db/: Cargo.toml
crates/shiori-db/src/: anki.rs  cards.rs  chat.rs  dict.rs  documents.rs  kanji.rs  lib.rs  schema.rs  sessions.rs  stats.rs  words.rs
crates/shiori-db/tests/: real_db_migration.rs
crates/shiori-dict/: Cargo.toml
crates/shiori-dict/examples/: parse_smoke.rs
crates/shiori-dict/src/: download.rs  jlpt.rs  kanji.rs  lib.rs  lookup.rs  pos.rs  types.rs
crates/shiori-gui/: Cargo.toml  build.rs
crates/shiori-gui/src/: app.rs  fonts.rs  main.rs  session.rs  settings.rs
crates/shiori-gui/src/views/: dictionary.rs  home.rs  library.rs  mod.rs  modal.rs  production.rs  reader.rs  review.rs  settings.rs  setup.rs  sources.rs  stats.rs  welcome.rs
crates/shiori-lang/: Cargo.toml
crates/shiori-lang/src/: lib.rs  profile.rs  service.rs  types.rs
crates/shiori-llm/: Cargo.toml
crates/shiori-llm/src/: anthropic.rs  chat.rs  lib.rs  ollama.rs  openai_compat.rs  prompts.rs
crates/shiori-nlp/: Cargo.toml
crates/shiori-nlp/src/: analyzer.rs  inflection.rs  japanese.rs  kana.rs  lib.rs  pos.rs  romaji.rs  ruby.rs  segment.rs
crates/shiori-nlp/tests/: token_snapshot.rs
crates/shiori-nlp/tests/fixtures/: tokens_ja.json
crates/shiori-pack/: Cargo.toml
crates/shiori-pack/src/: betacode.rs  catalog.rs  kaikki.rs  language.rs  lib.rs  manifest.rs  siat.rs
crates/shiori-packc/: Cargo.toml
crates/shiori-packc/src/: catalog.rs  grc.rs  kaikki.rs  main.rs
crates/shiori-srs/: Cargo.toml
crates/shiori-srs/src/: card.rs  scheduler.rs
docs/wiki/: AI-and-Chat.md  Architecture.md  Data-and-Interop.md  Dictionary-and-Kanji.md  Getting-Started.md  Home.md  Language-Packs.md  Online-Sources.md  Reading.md  Reviews-and-SRS.md  Statistics.md
site/: README.md  config.toml
site/content/: _index.md
site/content/docs/: _index.md  ai-and-chat.md  architecture.md  data-and-interop.md  dictionary-and-kanji.md  getting-started.md  languages.md  online-sources.md  reading.md  reviews-and-srs.md  statistics.md
site/static/: site.webmanifest  style.css
site/templates/: base.html  index.html  page.html  section.html
