[workspace]
resolver = "2"
members = [
    "crates/shiori-core",
    "crates/shiori-lang",
    "crates/shiori-pack",
    "crates/shiori-packc",
    "crates/shiori-nlp",
    "crates/shiori-srs",
    "crates/shiori-dict",
    "crates/shiori-db",
    "crates/shiori-app",
    "crates/shiori-llm",
    "crates/shiori-gui",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PeterDessev/Shiori"
authors = ["Peter Dessev <peter.dessev@gmail.com>"]

[workspace.dependencies]
shiori-core = { path = "crates/shiori-core" }
shiori-lang = { path = "crates/shiori-lang" }
shiori-pack = { path = "crates/shiori-pack" }
shiori-nlp = { path = "crates/shiori-nlp" }
shiori-srs = { path = "crates/shiori-srs" }
shiori-dict = { path = "crates/shiori-dict" }
shiori-db = { path = "crates/shiori-db" }
shiori-app = { path = "crates/shiori-app" }
shiori-llm = { path = "crates/shiori-llm" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The embedded morphological dictionary is slow to build unoptimized; always
# optimize heavy dependencies even in dev builds.
[profile.dev.package."*"]
opt-level = 2
