[package]
name = "jrc-app"
description = "Application services: ingestion, mining, reviews, statistics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
jrc-core.workspace = true
jrc-nlp.workspace = true
jrc-srs.workspace = true
jrc-dict.workspace = true
jrc-db.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde_json.workspace = true
