[package]
name = "jrc-app"
description = "Application services: ingestion, mining, reviews, statistics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
jrc-core.workspace = true
jrc-nlp.workspace = true
jrc-srs.workspace = true
jrc-dict.workspace = true
jrc-db.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde_json.workspace = true
epub = "2"
pdf-extract = "0.10"
encoding_rs = "0.8"

[dev-dependencies]
zip = "2"
