[package]
name = "jrc-core"
description = "Shared domain types and errors for the Japanese Reading Companion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true
