[package]
name = "jrc-db"
description = "SQLite persistence layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
jrc-core.workspace = true
jrc-srs = { version = "0.1.0", path = "../jrc-srs" }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
