[package]
name = "jrc-dict"
description = "JMdict dictionary and frequency list acquisition and lookup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
jrc-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"
quick-xml = "0.39"
csv = "1.4"
