[package]
name = "jrc-gui"
description = "Desktop GUI for the Japanese Reading Companion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
jrc-core.workspace = true
jrc-app.workspace = true
jrc-db.workspace = true
jrc-dict.workspace = true
jrc-srs.workspace = true
jrc-llm.workspace = true
eframe = "0.31"
rfd = "0.15"
dirs = "6"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
jrc-nlp = { version = "0.1.0", path = "../jrc-nlp" }
egui_extras = "0.31"

[[bin]]
name = "jrc"
path = "src/main.rs"
