[package]
name = "shiori-db"
description = "SQLite persistence layer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
shiori-core.workspace = true
shiori-srs = { version = "0.2.0", path = "../shiori-srs" }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
