[package]
name = "shiori-gui"
description = "Shiori desktop GUI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
shiori-core.workspace = true
shiori-app.workspace = true
shiori-db.workspace = true
shiori-dict.workspace = true
shiori-srs.workspace = true
shiori-llm.workspace = true
eframe = "0.31"
rfd = "0.15"
dirs = "6"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
shiori-lang = { version = "0.4.0", path = "../shiori-lang" }
shiori-nlp = { version = "0.4.0", path = "../shiori-nlp" }
egui_extras = "0.31"
egui_commonmark = { version = "0.20", default-features = false, features = ["pulldown_cmark"] }
ureq = "2"
kurbo = "0.13"

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "shiori"
path = "src/main.rs"
