[package]
name = "shiori-llm"
description = "Pluggable LLM explanation and feedback backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
shiori-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", features = ["json"] }
