[package]
name = "shiori-srs"
description = "FSRS spaced-repetition scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
shiori-core.workspace = true
serde.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
